bug fixes: show post form on mobile actions response templates. repositioned question checkbox on mobile new post template. added questions/comments email link to sidebar

--- a/sass/master.scss
+++ b/sass/master.scss
@@ -1,11 +1,13 @@
-/******!
+/*!
+ *****
  ***
  *** NYU SHANGHAI-NET
  ***
- ******/
+ *****
+ */
 
 
-/*! normalize.css v2.1.0 | MIT License | git.io/normalize */
+/* normalize.css v2.1.0 | MIT License | git.io/normalize */
 
 /* ==========================================================================
    HTML5 display definitions
@@ -1190,8 +1192,9 @@ body {
     @extend .comments; 
     .post-img { @include grid-column(3, $float: right);}
     p { clear: both; float: left; }
-    p:nth-of-type(1) {@include timestamp; @include adjust-font-size-to(14px, 1);}
+    p:nth-of-type(1) {@include timestamp; @include adjust-font-size-to(14px, .8);}
     p:nth-of-type(2) {@include adjust-font-size-to(22px, 1); }
+    .feed-text { @include grid-column(10.5); }
 }
 .action-wall {
     .action-post ~ .feed { padding: 0.25em; float: left; background: white; &:empty {display: none;}}
@@ -1373,6 +1376,7 @@ body {
 
     .question-wrapper {
         margin: 1em 0;
+        position: relative;
         
         .question {
             display: inline-block;
@@ -1382,7 +1386,7 @@ body {
         input {
             position: absolute;
             top: 50%;
-            left: -75%;
+            right: 40px;
             margin-top: -10px;
         }
     }
@@ -1730,8 +1734,6 @@ b.disabled {
         .user-img { @include grid-column(1.5, $collapse: true);}
     }
     
-    .action-participants .feed-text { @include grid-column(10.5); }
-    
     .new-comment {
         .user-img { // bringing it back from display none
             @include grid-column(1.5, $collapse: true);
@@ -1996,6 +1998,11 @@ b.disabled {
         padding: 0;
         position: absolute;
         width: 1px;
+    }
+    
+    .action-wall .new-post {
+        @include grid-column(12);
+        height: auto;
     }
     
     .step-two,
